# confidential-assets-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
fixtures/ts/: README.md  generate.ts  package.json  pnpm-lock.yaml
formal/: README.md
src/: bcs.rs  consts.rs  helpers.rs  lib.rs  memoize.rs  utils.rs
src/api/: confidential_asset.rs  mod.rs
src/crypto/: chunked_amount.rs  confidential_key_rotation.rs  confidential_normalization.rs  confidential_registration.rs  confidential_transfer.rs  confidential_withdraw.rs  encrypted_amount.rs  fiat_shamir.rs  mod.rs  range_proof.rs  scalar_ts.rs  twisted_ed25519.rs  twisted_el_gamal.rs  withdraw_protocol.rs
src/internal/: mod.rs  transaction_builder.rs  view_functions.rs
tests/: bcs_tests.rs  decryption_tests.rs  fiat_shamir_tests.rs  fiat_shamir_ts_tests.rs  memoize_tests.rs  proof_tests.rs  registration_tests.rs  transfer_sigma_fixture.rs
tests/fixtures/: transfer_sigma.fixture.json
